--- a/reports/report.qmd
+++ b/reports/report.qmd
@@ -2,7 +2,7 @@
 title: Homework 8 - World Bank Analysis
 ---
 
-GITHUB URL:  <https://github.com/cmsc-vcu/cmsc408-sp2025-hw8-jleonard99>
+GITHUB URL:  <https://github.com/cmsc-vcu/cmsc408-sp2025-hw8-annika-g.git>
 
 
 # Problem Background
@@ -91,7 +91,15 @@ List all non-countries.
 ## (skills: select, where)
 
 run_sql_and_return_html(cnx,"""
-select "doh!" as "Homer says ..." from dual
+select
+    country_code,
+    country_short_name,
+    region,
+    income_category
+  from
+    world_bank_data.wdi_country
+  where
+    region is null or region = '';
 """)
 ```
 
