--- a/reports/report.qmd
+++ b/reports/report.qmd
@@ -92,14 +92,14 @@ List all non-countries.
 
 run_sql_and_return_html(cnx,"""
 select
-    country_code,
-    country_short_name,
-    region,
-    income_category
+    `Country Code`,
+    `Short Name`,
+    `Region`,
+    `Income Group`
   from
     world_bank_data.wdi_country
   where
-    region is null or region = '';
+    `Region` is null or `Region` = ''
 """)
 ```
 
