--- a/reports/report.qmd
+++ b/reports/report.qmd
@@ -92,14 +92,11 @@ List all non-countries.
 
 run_sql_and_return_html(cnx,"""
 select
-    `Country Code`,
-    `Short Name`,
-    `Region`,
-    `Income Group`
+    `Short Name`
   from
     world_bank_data.wdi_country
   where
-    `Region` is null or `Region` = ''
+    `Region` is null or `Region` = '';
 """)
 ```
 
