--- a/reports/report.qmd
+++ b/reports/report.qmd
@@ -421,17 +421,17 @@ select
 
 run_sql_and_return_html(cnx,"""
 select
-    count(*) as "count",
+    count(*) as `count`,
     `Region`,
     `Income Group`
   from
     wdi_country
   where
-    `Income Group` = 'Low income'
+    `Income Group` = 'Low income' and `Region` is not null and `Region` != ''
   group by
     `Region`, `Income Group`
   order by
-    "count" DESC
+    `count` DESC
   limit 1;
 """)
 
@@ -486,37 +486,40 @@ select
 
 run_sql_and_return_html(cnx,"""
 with AllRegions as (
-      select distinct `Region` from wdi_country where `Region` is not null and `Region` != ''
-  ),
-  AllIncomeCategories as (
-      select 'High income' as `Income Group`
-      union all
-      select 'Upper middle income'
-      union all
-      select 'Lower middle income'
-      union all
-      select 'Low income'
-  ),
-  AllCombinations as (
-      select r.`Region`, ic.`Income Group`
-      from AllRegions r
-      cross join AllIncomeCategories ic
-  ),
-  ExistingCombinations as (
-      select distinct `Region`, `Income Group`
-      from wdi_country
-      where `Region` is not null and `Region` != ''
-        and `Income Group` is not null and `Income Group` != ''
-  )
-  select
-      ac.`Region`,
-      ac.`Income Group`
-  from
-      AllCombinations ac
-  left join
-      ExistingCombinations ec on ac.`Region` = ec.`Region` and ac.`Income Group` = ec.`Income Group`
-  where
-      ec.`Region` is null;
+              select distinct `Region` from wdi_country where `Region` is not null and `Region` != ''
+          ),
+          AllIncomeCategories as (
+              select 'High income' as `Income Group`
+              union all
+              select 'Upper middle income'
+              union all
+              select 'Lower middle income'
+              union all
+              select 'Low income'
+          ),
+          AllCombinations as (
+              select r.`Region`, ic.`Income Group`
+              from AllRegions r
+              cross join AllIncomeCategories ic
+          ),
+          ExistingCombinations as (
+              select distinct `Region`, `Income Group`
+              from wdi_country
+              where `Region` is not null and `Region` != ''
+                and `Income Group` is not null and `Income Group` != ''
+          )
+          select
+              ac.`Region`,
+              ac.`Income Group`,
+              case when ec.`Region` is null then 'Yes' else 'No' end as `Missing`
+          from
+              AllCombinations ac
+          left join
+              ExistingCombinations ec on ac.`Region` = ec.`Region` and ac.`Income Group` = ec.`Income Group`
+          where
+              ec.`Region` is null
+          order by
+              ac.`Region`, ac.`Income Group`;
 """)
 
 ```
@@ -535,39 +538,40 @@ with AllRegions as (
 ## THEN, add a 7th column calculating the percent of total for each,
 ## region-income pair.
 ##
-## actually calculating percentages and print out a table will be a
+## Actually calculating percentages and printing out a table will be a
 ## slam dunk after this!
 ## (skills: select, where, subqueries, joins, aggregate functions)
 
-run_sql_and_return_html(cnx,"""
-with RegionIncomeStats as (
-    select
-        `Region`,
-        `Income Group`,
-        count(*) as "Country Count",
-        sum(count(*)) over (partition by `Region`) as "Sum of Countries in Region",
-        sum(count(*)) over (partition by `Income Group`) as "Sum of Countries by Income",
-        sum(count(*)) over () as "Total Sum Countries"
-    from
-        wdi_country
-    where
-        `Region` is not null and `Region` != ''
-        and `Income Group` is not null and `Income Group` != ''
-    group by
-        `Region`, `Income Group`
-)
-select
+run_sql_and_return_html(cnx, """
+WITH RegionIncomeCounts AS (
+  SELECT
     `Region`,
     `Income Group`,
-    "Country Count",
-    "Sum of Countries in Region",
-    "Sum of Countries by Income",
-    "Total Sum Countries",
-    ("Country Count" * 100.0 / "Total Sum Countries") as "Percent of Total"
-from
-    RegionIncomeStats
-order by
-    `Region`, `Income Group`;
+    COUNT(*) AS `Country Count`
+  FROM
+    wdi_country
+  WHERE
+    `Region` IS NOT NULL AND `Region` != ''
+    AND `Income Group` IS NOT NULL AND `Income Group` != ''
+  GROUP BY
+    `Region`, `Income Group`
+)
+SELECT
+  `Region`,
+  `Income Group`,
+  `Country Count`,
+  -- Sum of counts for the current region partition
+  SUM(`Country Count`) OVER (PARTITION BY `Region`) AS `Sum of Countries in Region`,
+  -- Sum of counts for the current income group partition
+  SUM(`Country Count`) OVER (PARTITION BY `Income Group`) AS `Sum of Countries by Income`,
+  -- Sum of all counts (grand total)
+  SUM(`Country Count`) OVER () AS `Total Sum Countries`,
+  -- Percentage of the grand total for this specific pair
+  (`Country Count` * 100.0 / SUM(`Country Count`) OVER ()) AS `Percent of Total`
+FROM
+  RegionIncomeCounts
+ORDER BY
+  `Region`, `Income Group`;
 """)
 
 
